--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
 
 
 <!-- Sumit -->
+ <section >
+<div class="gallary">
+    <div class="grid" id="g1"><h4> Our gallery </h4>
+    <br> <p>Single Drop of blood can save your life </p>
+    <button type="button" class="btn btn-outline-success">View Gallery</button>
+    </div>
+    <div class="grid" id="g2"><img src="image1.jpeg" ></div>
+    <div class="grid" id="g3"><img src="image2.jpeg" ></div>
+    <div class="grid" id="g4"><img src="image3.jpeg" ></div> 
+</div>
+    </section>
 <footer>
             <div class="grid-container">
   <div class="grid-item" id="a">
