--- a/Frontend/HomePage.html
+++ b/Frontend/HomePage.html
@@ -1,99 +1,112 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Map My Blood</title>
+    <meta charset="UTF-8">
+    <title>Map My Blood | Save Lives</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
-    <link rel="stylesheet" href="HomePage.css">
-    <link rel="icon" href="logo3.png">
+    <link rel="stylesheet" href="trial.css">
+    <link rel="icon" href="Images\new logo.png">
 </head>
 
-<body style="font-family: verdana;">
-<div >
-    <nav class="navbar-bg">
-        <span class="logo"><img src="logo3.png" alt="" height="60px" width="60px">&nbsp; Map My <b>BLOOD</b></span>
-        <div class="nav-buttons">
-            <button type="button" class="btn btn-secondary">Home</button>
-            <button type="button" class="btn btn-secondary">Login</button>
-            <button type="button" class="btn btn-secondary">Sign Up</button>
-            <button type="button" class="btn btn-secondary">About Us</button>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
+        <div class="container">
+            <a class="navbar-brand logo" href="#">
+                <img src="Images\new logo.png" alt="Logo" height="50"> Map My <span>BLOOD</span>
+            </a>
+            <div class="nav-buttons ms-auto">
+                <button class="btn btn-link nav-link-custom">Home</button>
+                <button class="btn btn-link nav-link-custom">About Us</button>
+                <button class="btn btn-outline-danger mx-2">Login</button>
+                <button class="btn btn-danger">Sign Up</button>
+            </div>
         </div>
     </nav>
-</div>
-<div class="bd">
-    <div class="log">
-        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <img src="logo3.png" alt=""></p>
-        <h3>&nbsp; &nbsp; &nbsp; &nbsp; Map My <b>BLOOD</b></h3>
-        <p class="quote">&nbsp; &ldquo;Donate Blood, Save Lives&rdquo;</p>
-        <button type="button" class="btn btn-secondary">Get Started</button>
 
-    </div>
-</div>
-<div class="nd">
-    <h1>Our Services</h1>
-    <div class="card">
-        <i class="bi bi-search-heart"></i>
-        <p>Blood Availability Search</p>
-    </div>
-    <div class="card">
-        <i class="bi bi-search-heart"></i>
-        <p>Blood Availability Search</p>
-    </div>
-    <div class="card">
-        <i class="bi bi-search-heart"></i>
-        <p>Blood Availability Search</p>
-    </div>
-    <div class="card">
-        <i class="bi bi-search-heart"></i>
-        <p>Blood Availability Search</p>
-    </div>
-</div>
+    <header class="hero-section">
+        <div class="container text-center">
+            <div class="hero-logo-container">
+                <img src="Images\new logo.png" alt="Map My Blood Hero" class="hero-logo pulse-animation">
+            </div>
+            <h1 class="display-4 fw-bold mt-4">Every Drop Counts</h1>
+            <p class="lead quote text-muted">"A single drop of blood can save a life."</p>
+            <div class="mt-4">
+                <button class="btn btn-danger btn-lg px-5 shadow">Find Blood Now</button>
+            </div>
+        </div>
+    </header>
 
-
-<!-- Sumit -->
- <section >
-<div class="gallary">
-    <div class="grid" id="g1"><h4> Our gallery </h4>
-    <br> <p>Single Drop of blood can save your life </p>
-    <button type="button" class="btn btn-outline-success">View Gallery</button>
-    </div>
-    <div class="grid" id="g2"><img src="image1.jpeg" ></div>
-    <div class="grid" id="g3"><img src="image2.jpeg" ></div>
-    <div class="grid" id="g4"><img src="image3.jpeg" ></div> 
-</div>
+    <section class="services-section py-5">
+        <div class="container text-center">
+            <h2 class="mb-5 section-title">Our Services</h2>
+            <div class="row g-4 justify-content-center">
+                <div class="col-md-4">
+                    <div class="service-card shadow-sm">
+                        <i class="bi bi-geo-alt-fill text-danger fs-1"></i>
+                        <h4 class="mt-3">Locate Banks</h4>
+                        <p>Find the nearest blood banks in your city instantly.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-card shadow-sm">
+                        <i class="bi bi-search-heart text-danger fs-1"></i>
+                        <h4 class="mt-3">Check Availability</h4>
+                        <p>Real-time updates on blood group availability.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-<footer>
-            <div class="grid-container">
-  <div class="grid-item" id="a">
-<span class="logo1"><img src="logo3.png" alt="" height="60px" width="60px">&nbsp; Map My BLOOD </span>
-<span class="connect">Connect with us </span>
-<img src="Facebook.png" class="facebook">
-<img src="instagram-logo.png" class="insta">
-<img src="X_logo.jpg.jpeg" class="x">
-  </div>
 
+    <section class="gallery-section py-5 bg-light">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-4 mb-4 mb-lg-0">
+                    <h2 class="section-title">Our Gallery</h2>
+                    <p class="text-muted">Witness the impact of your contributions and our community outreach.</p>
+                    <button class="btn btn-outline-success">View Full Gallery</button>
+                </div>
+                <div class="col-lg-8">
+                    <div class="row g-2">
+                        <div class="col-4"><img src="Images\image1.jpg" class="img-fluid rounded shadow-sm gallery-img" alt="Gallery 1"></div>
+                        <div class="col-4"><img src="Images\image2.jpg" class="img-fluid rounded shadow-sm gallery-img" alt="Gallery 2"></div>
+                        <div class="col-4"><img src="Images\image3.jpeg" class="img-fluid rounded shadow-sm gallery-img" alt="Gallery 3"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<div class="grid-item" id="b"><h2>Quick Links</h2>
-<h5>Home</h5>
-<h5>About us</h5>
-<h5>Search blood avaliability</h5>
-<h5>Search blood banks</h5></div>
-
-  <div class="grid-item" id="c"><h2>Contact Us</h2>
-<p>Email<br> mapmyblood@cdac.in</p>
-<p>Contact<br>+91 7680012406 +91 7294974702 7001024 </p>
-<p>Address<br>Hamankonda, Warangal,Telengana, India</p>
-</div>
-
-  <div class="grid-item" id="d"><h2>Policies</h2> 
- <p>Terms and Conditions</p>
-  <p>Privacy Policy </p>
-  <p>Accessability Statement</p>
-</div>
- 
-</div>   
+    <footer class="footer-bg py-5 text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <h4 class="logo1"><img src="Images\new logo.png" alt="" height="40"> Map My BLOOD</h4>
+                    <p class="mt-3">Connecting donors with those in need. Locate, Donate, Save Lives.</p>
+                    <div class="social-links">
+                        <img src="Images\Facebook.png" alt="FB" class="social-icon">
+                        <img src="Images\instagram-logo.png" alt="IG" class="social-icon">
+                        <img src="Images\X_logo.jpg" alt="X" class="social-icon">
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <h4>Quick Links</h4>
+                    <ul class="list-unstyled">
+                        <li>Home</li>
+                        <li>About Us</li>
+                        <li>Search Availability</li>
+                        <li>Blood Banks</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h4>Contact Us</h4>
+                    <p><i class="bi bi-envelope"></i> contact@mapmyblood.com</p>
+                    <p><i class="bi bi-telephone"></i> +1 234 567 890</p>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
